--- a/style.css
+++ b/style.css
@@ -8,16 +8,36 @@
     color: black;
 }
 
+body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+}
+
 nav{
     height: 10vh;
+    width: 100%;
     background-color: black;
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 20px;
+    position: absolute;
+    top: 0;
 }
 
+.cover{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 72vh;
+    width: 33%;
+    border: 2px solid black;
+    border-radius: 30px;
+}
 .container{
     height: 90vh;
     display: flex;
@@ -27,7 +47,7 @@ nav{
 }
 .score{
     position: absolute;
-    top: 20px;
+    top: 70px;
     left: 20px;
 } .score::selection{
     background-color: #000;
